<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_password_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_password_box_placeholder"
        android:textSize="@dimen/password_text_size"
        android:freezesText="true"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_generate_password"
        android:layout_height="100dp"
        android:layout_width="0dp"
        android:textSize="@dimen/button_main_text_size"
        android:text="@string/button_generate_password"
        android:onClick="ocButtonGeneratePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        android:theme="@style/Theme.MnemonicPasswords.ButtonMain"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_copy_to_clipboard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:onClick="ocButtonCopyToClipboard"
        android:text="@string/button_copy_to_clipboard"
        android:textSize="@dimen/button_main_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_copy_to_clipboard"
        android:src="@drawable/ic_baseline_content_paste_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:contentDescription="@string/button_copy_to_clipboard" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <CheckBox
        android:id="@+id/checkbox_filter_apostrophes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:onClick="ocCheckboxFilterApostrophes"
        android:text="@string/checkbox_filter_apostrophes"
        android:textColor="#00796B"
        app:layout_constraintBottom_toTopOf="@id/button_copy_to_clipboard"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintRight_toLeftOf="@+id/guideline1" />

    <CheckBox
        android:id="@+id/checkbox_filter_proper_nouns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:onClick="ocCheckboxFilterProperNouns"
        android:text="@string/checkbox_filter_proper_nouns"
        android:textColor="#00796B"
        app:layout_constraintBottom_toTopOf="@id/button_generate_password"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>