<resources>
    <string name="app_name">MnemonicPasswords</string>
    <string name="button_generate_password">Generate Password</string>
    <string name="textview_password_box_placeholder">Press Generate Password</string>
    <string name="toast_error_reading_dictionaries_dictionary">Error reading dictionaries directory</string>
    <string name="toast_error_opening_dictionary">Error opening dictionary</string>
    <string name="textview_error_generating_password">Error generating password</string>
    <string name="toast_error_generate_password_dict_not_initialized">Cannot generate password: dictionary not initialized</string>
    <string name="button_copy_to_clipboard">Copy to clipboard</string>
    <string name="toast_clipboard_copy_success">Password copied to clipboard</string>
    <string name="toast_no_password">No password to copy</string>
    <string name="checkbox_filter_apostrophes">Filter apostrophes</string>
    <string name="checkbox_filter_proper_nouns">Filter proper nouns</string>
    <string name="toast_error_generate_password_timeout">Cannot generate password: too many tries trying to construct</string>
</resources>